--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
